--- a/plugin.xml
+++ b/plugin.xml
@@ -111,8 +111,10 @@
 
 <!--     <framework src="Fabric" type="podspec" spec="~> 1.9" />
     <framework src="Crashlytics" type="podspec" spec="~> 3.12" /> -->
-    <framework src="FirebaseAnalytics" type="podspec" spec="~> 4.2" />
-    <framework src="FirebaseMessaging" type="podspec" spec="~> 2.2" />
+    <!--<framework src="FirebaseAnalytics" type="podspec" spec="~> 4.2" />
+    <framework src="FirebaseMessaging" type="podspec" spec="~> 2.2" />-->
+    <podspec src="FirebaseAnalytics" spec="~> 4.2" />
+    <podspec src="FirebaseMessaging" spec="~> 2.2" />
    <!--  <framework src="FirebaseAuth" type="podspec" spec="~> 4.6.1" />
     <framework src="FirebaseRemoteConfig" type="podspec" spec="~> 2.1.3" />
     <framework src="FirebasePerformance" type="podspec" spec="~> 1.1.3" />
